# CodeMappr

./: .gitignore  CHANGELOG.md  CODEMAPPR.html  CODEMAPPR.md  LICENSE  README.md  capture_screenshots.py  generate_terminal_html.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
codemappr/: cli.py  detector.py  display.py  explainer.py  exporter.py  models.py  walker.py
docs/screenshots/: DEMO.html  DEMO.md  README_SCREENSHOTS.md  format_all_output.html  md_preview.html  terminal_output.html
tests/: conftest.py  test_detector.py  test_explainer.py  test_exporters.py  test_models.py  test_walker.py
