[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codemappr"
version = "1.0.0"
description = "Instantly understand any codebase."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "typer[all]",
    "rich",
]

[project.scripts]
codemappr = "codemappr.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["codemappr*"]
